erDiagram
    Users {
        BIGINT user_id PK
        VARCHAR(50) handle UK
        VARCHAR(100) email UK
        VARCHAR(255) password
        VARCHAR(100) name
        INT rating
        INT max_rating
        VARCHAR(50) user_rank
        VARCHAR(50) max_rank
        VARCHAR(100) country
        VARCHAR(100) city
        VARCHAR(200) organization
        VARCHAR(500) avatar
        DATETIME2 registration_time
        DATETIME2 last_online_time
        INT contribution
        BIT is_admin
        BIT is_active
    }

    CONTEST {
        BIGINT contest_id PK
        VARCHAR(200) name
        VARCHAR(10) type
        VARCHAR(30) phase
        BIT frozen
        DATETIME2 start_time
        INT duration_seconds
        VARCHAR(500) website_url
        TEXT description
        INT difficulty
        VARCHAR(100) kind
        VARCHAR(100) icpc_region
        VARCHAR(100) country
        VARCHAR(100) city
        VARCHAR(50) season
        BIGINT created_by FK
    }

    PROBLEM {
        VARCHAR(50) problem_id PK
        BIGINT contest_id FK
        VARCHAR(10) problem_index
        VARCHAR(300) title
        TEXT statement
        TEXT input_specification
        TEXT output_specification
        NVARCHAR(MAX) sample_tests
        TEXT notes
        INT time_limit_ms
        INT memory_limit_kb
        VARCHAR(10) difficulty
        DATETIME2 creation_time
        BIT is_visible
    }

    PROBLEM_TAG {
        BIGINT tag_id PK
        VARCHAR(50) name UK
        TEXT description
    }

    PROBLEM_TAG_RELATION {
        VARCHAR(50) problem_id PK,FK
        BIGINT tag_id PK,FK
    }

    TEST_CASE {
        BIGINT test_case_id PK
        VARCHAR(50) problem_id FK
        TEXT input_data
        TEXT expected_output
        BIT is_sample
        INT test_order
    }

    SUBMISSION {
        BIGINT submission_id PK
        BIGINT user_id FK
        VARCHAR(50) problem_id FK
        BIGINT contest_id FK
        VARCHAR(50) programming_language
        TEXT source_code
        INT source_length
        VARCHAR(50) verdict
        INT time_consumed_ms
        INT memory_consumed_kb
        INT passed_test_count
        NVARCHAR(MAX) test_results
        DATETIME2 submission_time
        INT relative_time
        INT points
    }

    CONTEST_USER {
        BIGINT contest_id PK,FK
        BIGINT user_id PK,FK
        DATETIME2 registration_time
        VARCHAR(30) role
        INT rating_before
        INT rating_after
        INT contest_rank
        INT solved_count
        INT total_penalty
        INT scores
    }

    HACK {
        BIGINT hack_id PK
        BIGINT hacker_id FK
        BIGINT submission_id FK
        VARCHAR(20) verdict
        TEXT test_case
        DATETIME2 hack_time
        TEXT hack_result
    }

    Users ||--o{ SUBMISSION : makes
    Users ||--o{ CONTEST : creates
    Users ||--o{ HACK : performs
    Users }o--|| CONTEST_USER : participates_in
    
    CONTEST ||--o{ PROBLEM : contains
    CONTEST ||--o{ SUBMISSION : has
    CONTEST }o--|| CONTEST_USER : involves
    
    PROBLEM ||--o{ SUBMISSION : receives
    PROBLEM ||--o{ TEST_CASE : has
    PROBLEM }o--|| PROBLEM_TAG_RELATION : categorized_through
    
    PROBLEM_TAG }o--|| PROBLEM_TAG_RELATION : categorizes
    
    SUBMISSION ||--|| HACK : challenged_by